Add entity framework sql-server to the project. Create the initial Migrations. Add Boilerplate code for DDD.

--- a/Carlosdev.Application/Carlosdev.Application.csproj
+++ b/Carlosdev.Application/Carlosdev.Application.csproj
@@ -7,12 +7,12 @@
   <ItemGroup>
     <Folder Include="Categories\" />
     <Folder Include="Comments\" />
-    <Folder Include="Posts\Commands\" />
     <Folder Include="Users\" />
     <Folder Include="Tags\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Carlosdev.Common\Carlosdev.Common.csproj" />
     <ProjectReference Include="..\Carlosdev.Domain\Carlosdev.Domain.csproj" />
   </ItemGroup>
 
