--- a/Carlosdev.Persistence/Carlosdev.Persistence.csproj
+++ b/Carlosdev.Persistence/Carlosdev.Persistence.csproj
@@ -1,20 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-preview6.19304.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Carlosdev.Application\Carlosdev.Application.csproj" />
     <ProjectReference Include="..\Carlosdev.Domain\Carlosdev.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Posts\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
   </ItemGroup>
 
 </Project>
